<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="add_new_list">Add New List</string>
    <string name="add_new_Item">Add new item in list</string>
    <string name="save">Save</string>
    <string name="item_description_optional">Item description(optional)</string>
    <string name="item_name">Item Name</string>
    <string name="task_completed">Task Completed</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="delete_category_Item_title">Delete</string>
    <string name="delete_category_Item_content">Deleting this row will delete all the items under this row. Do you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrowicon">arrowIcon</string>
    <string name="backbutton">backButton</string>
    <string name="Settings">Settings</string>
    <string name="category_name">Category Name</string>
    <string name="important">Important Items</string>
    <string name="important_ques">Is it Important?</string>
    <string name="task_name_cannot_be_empty">Task Name cannot be empty</string>
    <string name="no_task_added">No task or subtask added. Please add some tasks and subtasks</string>
    <string name="no_subtask_added">No subtask added. Please add some subtasks</string>
    <string name="ok">Ok</string>
    <string name="list_icon">list icon</string>
    <string name="priority_icon">priority icon</string>
    <string name="all_items">All Items</string>
    <string name="unable_to_delete">Unable to Delete</string>
    <string name="imp_item_delete_message">This is not a deletable item because it just showes the list of important items and it is added only if there are any important items marked</string>
    <string name="important_icon">Important icon</string>
    <string name="important_ques_mark">Important?</string>
    <string name="add_new_item">Add New Item</string>
    <string name="priority">Priority:</string>
    <string name="about_us_text">You can create a to-do list app that
        allows users to manage tasks by organizing them into categories and subcategories.
        Users can mark tasks as important, highlighting them for quick access,
        and also mark them as done to track progress.
         With features for categorization, prioritization, and completion,
        this app enhances task management and helps users
        stay organized and productive.
    </string>
    <string name="dark_mode">DARK MODE ?</string>
    <string name="about_us">About App</string>
    <string-array name="priority_level">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>