<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_Subcategory_view"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/white"
    android:clickable="true"
    app:behavior_hideable="true"
    app:behavior_peekHeight="36dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <EditText
        android:id="@+id/subCategoryNameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/item_name"
        android:textColor="#292929"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/subCategoryDescriptionTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/addSubCategoryTitle" />

    <EditText
        android:id="@+id/subCategoryDescriptionTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/item_description_optional"
        android:textColor="#292929"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/saveSubCategoryItemBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/subCategoryNameTV" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/subCategoryDescriptionTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/subCategoryNameTV"
        app:srcCompat="@drawable/ic_baseline_exposure_plus_1_24" />

    <TextView
        android:id="@+id/addSubCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/headerColor"
        android:gravity="center"
        android:text="@string/add_new_Item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveSubCategoryItemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/subCategoryDescriptionTv"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/subCategoryDescriptionTv" />
</androidx.constraintlayout.widget.ConstraintLayout>