<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_category_view"
    style="@style/ThemeOverlay.YourApp.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/recycler_row_view_bg"
    android:clickable="true"
    app:behavior_hideable="true"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/addCategoryTitle"
        style="@style/HeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:paddingStart="10dp"
        android:background="@drawable/subcategory_bg"
        android:gravity="start|center_vertical"
        android:text="@string/add_new_Item"
        app:layout_constraintEnd_toStartOf="@+id/saveTaskBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveTaskBtn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/app_text_color"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/addCategoryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addCategoryTitle" />

    <TextView
        android:id="@+id/priorityTitle"
        style="@style/BottomSheetTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="Priority:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prioritySelector"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/isImportantLayout"
        app:layout_constraintTop_toBottomOf="@+id/subTaskNameInputLayout" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/prioritySelector"
        style="@style/BottomSheetTextStyle"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/priorityTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/priorityTitle"
        app:layout_constraintTop_toTopOf="@+id/priorityTitle" />

    <LinearLayout
        android:id="@+id/isImportantLayout"
        style="@style/BottomSheetTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:drawableTint="@color/toolbarColor"
        android:paddingVertical="5dp"
        android:paddingStart="5dp"
        android:text="@string/important_ques"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/priorityTitle"
        app:layout_constraintEnd_toStartOf="@+id/priorityTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priorityTitle"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/is_Important_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unimportant_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BottomSheetTextStyle"
            android:text="Important?"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryNameLayout"
        style="@style/BottomSheetTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/add_new_Item"
        android:textColorHint="@color/hint_color"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/subTaskNameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCategoryTitle">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/categoryNameTV"
            style="@style/BottomSheetTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subTaskNameInputLayout"
        style="@style/BottomSheetTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:autofillHints=""
        android:hint="@string/item_description_optional"
        android:inputType="textAutoComplete"
        android:textColorHint="@color/hint_color"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/priorityTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryNameLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/categoryDescriptionTv"
            style="@style/BottomSheetTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>